[gd_scene format=3 uid="uid://liu2o3bk6g1l"]

[ext_resource type="Theme" uid="uid://c83fms1gj1tns" path="res://main_theme.tres" id="1_1ulal"]
[ext_resource type="Script" uid="uid://chptmp7878yfc" path="res://scenes/day_cycle_manager.gd" id="1_2wrtp"]

[sub_resource type="Animation" id="Animation_2wrtp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_r0yia"]
resource_name = "end_day"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_y7ojl"]
resource_name = "start_day"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y7ojl"]
_data = {
&"RESET": SubResource("Animation_2wrtp"),
&"end_day": SubResource("Animation_r0yia"),
&"start_day": SubResource("Animation_y7ojl")
}

[node name="DayCycleManager" type="Node2D" unique_id=122806213]
script = ExtResource("1_2wrtp")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=216152630]

[node name="Control" type="Control" parent="CanvasLayer" unique_id=1096596131]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ulal")

[node name="EndDayButton" type="Button" parent="CanvasLayer/Control" unique_id=1093562310]
layout_mode = 1
offset_left = 62.0
offset_top = 77.0
offset_right = 225.0
offset_bottom = 140.0
text = "End Day"

[node name="Label" type="Label" parent="CanvasLayer/Control" unique_id=1885994518]
layout_mode = 1
offset_left = 107.0
offset_top = 31.0
offset_right = 176.0
offset_bottom = 72.0
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 40
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/Control" unique_id=1013660770]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DayInfoLabel" type="Label" parent="CanvasLayer/Control" unique_id=1266558831]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 126
text = "Day Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=873586160]
libraries/ = SubResource("AnimationLibrary_y7ojl")

[connection signal="pressed" from="CanvasLayer/Control/EndDayButton" to="." method="_on_end_day_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
